--- a/datenerhebung.tex
+++ b/datenerhebung.tex
@@ -14,40 +14,68 @@ Wie die bisherige Forschung gezeigt hat, unterliegen sehr viele Menschen dem Ein
 Zusätzlich wurde gezeigt, dass die Bias Awareness einen maßgeblichen Einfluss auf den Grad der Auswirkungen dieser kognitiven Verzerrungen hat.
 Es wurde diskutiert, dass implicit biases und ihre Einflüsse auch in der Schule präsent sind und unter Anderem Auswirkungen auf die Bewertungen und den schulischen Erfolg der Schülerinnen und Schüler haben kann.
 
-Es stellt sich die Frage, ob die gemessene Bias Awareness von Lehrkräften geringer oder höher ist, wenn sie bei der Erfassung an Schülerinnen und Schüler denken.
+Wie bereits in \autoref{sec:itemformulierung} diskutiert, kann die Formulierung von Fragebogenitems einen erheblichen Einfluss auf die damit gemessenen Werte haben.
+Ein Grund dafür ist das Framing der Fragen, welche die abgegebenen Antworten in eine bestimmte Richtung lenken können.
+Es stellt sich daher die Frage, ob die gemessene Bias Awareness von Lehrkräften geringer oder höher ist, wenn sie bei der Erfassung an Schülerinnen und Schüler denken.
 Gegebenenfalls verstärkt sich dieser Effekt auch, wenn es sich dabei um Schülerinnen und Schüler handelt, die sie zusätzlich selbst unterrichten.
+
+Ebenfalls kann es sein, dass sich die gemessene Bias Awareness in Bezug auf eine stereotypisierte Gruppe gegenüber einer anderen stereotypisierten Gruppe unterscheidet.
+Zusätzlich könnten sich innerhalb einer Gruppe Unterschiede in der gemessenen Bias Awareness ergeben, wenn sie einerseits allgemein und andererseits in Bezug auf den schulischen Kontext erfasst wird.
+
+Weiterhin stellt sich die Frage, ob es Unterschiede in Abhängigkeit von der Erfahrung der Lehrkräfte gibt.
+Es könnte beispielsweise sein, dass die Bias Awareness von Lehrkräften mit Berufserfahrung höher ist als die von Studierenden, welche bisher nur wenig oder keine Praxiserfahrung besitzen.
 
 Basierend auf diesen Überlegungen lassen sich folgende Leitfragen formulieren:
 
 \begin{itemize}
-	\item Spielt die kontextgebundene bzw. freie Formulierung der Fragebogenitems bei Erfassung der Bias Awareness bei Lehrkräften eine Rolle?
 	\item Unterscheidet sich die gemessene Bias Awareness bei allgemein formulierten Fragebogenitems gegenüber der gemessenen Bias Awareness bei Verwendung von schulspezifischen Formulierungen?
 	\item Bestehen Unterschiede, wenn die Fragebogenitems so formuliert sind, dass Lehrkräfte Aussagen zu selbst unterrichteten Schülerinnen und Schülern treffen müssen?
+	\item Spielt es bei der Erfassung der Bias Awareness eine Rolle, ob die Items schul- und stereotypenspezifisch (z.B. in Bezug auf Migrationshintergrund) formuliert sind im Vergleich zu allgemeiner, stereotypenspezifischer Formulierung?
+	\item Gibt es Differenzen zwischen Lehrkräften und Lehramtsstudierenden?
 \end{itemize}
 
-Die Beantwortung der oben stehenden Leitfragen ist das Ziel der vorliegenden Arbeit.
+Die vorliegende Arbeit soll einen Versuch darstellen, Antworten auf diese Leitfragen zu finden und aufzuzeigen, in welchen Bereichen zusätzliche Forschung zur Beantwortung der Fragen notwendig ist.
 
 
 \section{Hypothesen}
 \label{sec:hypothesen}
 
-Basierend auf den oben formulierten Zielen und Leitfragen für diese Arbeit lassen sich nun Hypothesen aufstellen, welche sich anschließend mit statistischen Methoden verifizieren oder falsifizieren lassen:
+Auf Basis der oben formulierten Ziele und Leitfragen für diese Arbeit lassen sich nun Hypothesen aufstellen, welche sich anschließend mit statistischen Methoden verifizieren oder falsifizieren lassen:
 
 \begin{enumerate}
-	\item[H1:] \emph{Lehrkräfte haben eine höhere Bias Awareness gegenüber Schülerinnen und Schülern im Vergleich zu Personen, die keine Schülerinnen oder Schüler sind.}
-	\item[H2:] \emph{Lehrkräfte haben eine geringere Bias Awareness gegenüber Schülerinnen und Schülern, die sie nicht unterrichten im Vergleich zu Schülerinnen und Schülern, die von ihnen unterrichtet werden.}
-	\item[H3:] \emph{Lehrkräfte haben eine geringere Bias-Awareness gegenüber Personen, die keine Schülerinnen oder Schüler sind im Vergleich zu Schülerinnen und Schülern, die von ihnen unterrichtet werden.}
+	\item[H1:] \emph{Die Bias Awareness von Lehrkräften gegenüber Schülerinnen und Schülern unterscheidet sich gegenüber Personen, die keine Schülerinnen oder Schüler sind.}
+	\item[H2:] \emph{Die Bias Awareness von Lehrkräften gegenüber Schülerinnen und Schülern, die sie selbst unterrichten, unterscheidet sich im Vergleich zu ihrer Bias Awareness gegenüber Schülerinnen und Schülern allgemein.}
+	\item[H3:] \emph{Die mit schul- und stereotypenspezifisch formulierten Items gemessene Bias Awareness unterscheidet sich von der mit allgemeinen, stereotypenspezifischen Items gemessenen Bias Awareness.}
+	\item[H4:] \emph{Die Bias Awareness von Lehramtsstudierenden ist unterschiedlich im Vergleich zur Bias Awareness von Lehrkräften mit Praxiserfahrung.}
 \end{enumerate}
 
 Mithilfe von H1 wird untersucht, ob und wenn ja, wie groß die Unterschiede der gemessenen Bias Awareness zwischen allgemein formulierten Items und schulspezifischen Items sind.
-Ob Unterschiede bei der Erfassung der Bias Awareness bezüglich eigener Schülerinnen und Schüler im Vergleich zu allgemeinen bzw. schulspezifischen Fragebogen vorliegen, werden mit H2 und H3 untersucht.
-
-Die Formulierung der Fragebogenitems spielt eine entscheidende Rolle bei der Evaluierung von Konstrukten wie der Bias Awareness.
-Beispielsweise kann eine kontextspezifische Formulierung der Items im Vergleich zu kontextunabhängig formulierten Items Messfehler reduzieren und die Validität erhöhen \citep{bing2004incremental}.
-Durch Framing kann die Formulierung der Items die Bias Awareness beeinflussen \citep{rohner2013reducing}.
-Auch das Format der Items kann eine Rolle spielen:
-So reduziert eine nuancenreiche Auswahl an Antwortmöglichkeiten das Risiko für biasbehaftete Antworten \citep{elson2017question}.
+Ob Unterschiede bei der Erfassung der Bias Awareness bezüglich eigener Schülerinnen und Schüler im Vergleich zu Schülerinnen und Schülern im Allgemeinen vorliegen, wird mit H2 untersucht.
+Da die Erfassung nicht nur allgemein erfolgt, sondern auch Skalen mit stereotypenspezifischer Formulierung getestet werden, sollen Differenzen in den Messungen mit H3 analysiert werden.
+Schlussendlich soll die Frage, ob die gemessene Bias Awareness sich zwischen Lehrkräften mit Berufserfahrung und Lehramtsstudierenden unterscheidet, mithilfe von H4 beantwortet werden.
 
 
-\section{Entwurf und Durchführung der Datenerhebung}
-\label{sec:datenerhebung}
+\section{Methodik}
+\label{sec:methodik}
+
+Zur Beantwortung der Forschungsfrage und zum damit verbundenen Überprüfen der aufgestellten Hypothesen wurde eine quantitative Datenerhebung durchgeführt.
+Diese fand im Rahmen eines Online-Fragebogens statt, dessen Bearbeitungsdauer sich auf etwa 10--15 Minuten belief.
+Hierfür wurde die Online-Plattform SoSci Survey \citep{leiner2024sosci} verwendet, was es ermöglichte, den Fragebogen einfach zur Verfügung zu stellen.
+Die Zielgruppe des Fragebogens waren sowohl Lehramtsstudierende und Referendare als auch fertig ausgebildete Lehrkräfte mit Praxiserfahrung.
+
+Der Fragebogen setzte sich dabei aus mehreren Seiten zusammen, in denen zunächst soziodemographische Informationen wie Geschlecht, Alter sowie Geburtsland abgefragt wurden.
+Darauf folgend wurden berufliche Angaben wie die Formale Bildung, aktuelle Beschäftigung und Schulart erhoben.
+Anschließend wurde die Bias Awareness zuerst allgemein, dann mit Bezug auf den schulischen Kontext erfasst.
+Auf einer dritten Seite wurden die Fragen zusätzlich geschlechtsspezifisch formuliert.
+
+Die Erfassung der Bias Awareness erfolgte mit einer übersetzten und angepassten Version der von \citet{perry2015modern} vorgestellten Bias Awareness Skala.
+Die Übersetzung und Anpassung der Skala auf den deutschen Kontext erfolgte durch \citet{bonefeld2022reflexion}.
+Hier wurden auch zusätzlich kontextspezifische Formulierungen verwendet; neben einer allgemeinen Erfassung (Beispielitem: ``Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber manchen Menschen habe'') wurden beispielsweise auch die Bias Awareness gegenüber Frauen (Beispielitem: ``Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber Frauen habe''), Männern und sozioökonomischem Status (Beispielitem: ``Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber Menschen mit einem niedrigen sozio-ökonomischen Status habe'') erfasst.
+
+Zusätzlich zu den allgemeinen Skalen zur Erfassung der Bias Awareness wurden eigenkonstruierte Skalen verwendet, in welchen jede der genannten Formulierungen auf den schulischen Kontext angepasst wurde.
+Dies geschah sowohl für die allgemeine Bias Awareness (Beispielitem der neuen Skala: ``Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber Schüler*innen habe'') als auch in Bezug auf Migrationshintergrund, sozioökonomischen Status (Beispielitem der neuen Skala: ``Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber Schüler*innen mit einem niedrigen sozio-ökonomischen Status habe'') sowie männliches und weibliches Geschlecht.
+Die allgemein formulierte Skala zur Erfassung der Bias Awareness wurde zusätzlich so modifiziert, dass sich die Formulierung auf durch die Lehrkraft selbst unterrichtete Schülerinnen und Schüler bezog (Beispielitem: ``Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber Schüler*innen habe, welche ich aktuell unterrichte'').
+
+Zur Erfassung wurde im Unterschied zu den in \citet{perry2015modern} und \citet{bonefeld2022reflexion} verwendeten Skalen eine 6-stufige anstatt einer 7-stufigen Likert-Skala verwendet.
+Wie bereits in \autoref{sec:itemformulierung} beschrieben, können Likert-Skalen mit einer ungeraden Anzahl an Antwortoptionen zu einer Verzerrung des Ergebnisses durch eine Tendenz zur Mitte führen.
+Den möglichen Auswirkungen dieses Effekts sollte hier durch die Wahl der 6-stufigen Likert-Skala vorgebeugt werden.
