--- a/diskussion.tex
+++ b/diskussion.tex
@@ -1,1 +1,160 @@
 \chapter{Diskussion}
+\label{ch:diskussion}
+
+Im Folgenden sollen die Ergebnisse der Befragung sowie ihre statistische Bedeutung genutzt werden, um Rückschlüsse auf die in \autoref{sec:hypothesen} aufgestellten Hypothesen zu ziehen.
+Weiterhin soll kritisch diskutiert werden, unter welchen Bedingungen die Ergebnisse entstanden sind und über welche Aussagekraft diese verfügen.
+Hierbei soll auch beleuchtet werden, welchen Limitationen die vorliegende Arbeit unterliegt.
+Zuletzt wird beleuchtet, welche zukünftige Forschung verfolgt werden und welche neuen wissenschaftlichen Erkenntnisse die Resultate dieser Arbeit vertiefen könnten.
+
+
+\section{Aussagekraft der Ergebnisse}
+
+Bevor die Ergebnisse im Folgenden in Hinblick auf die aufgestellten Hypothesen interpretiert und zur Beantwortung der Leitfragen genutzt werden, muss zunächst die interne Konsistenz der verwendeten Skalen diskutiert werden.
+Die Berechnung der Werte für Cronbach's Alpha in \autoref{tab:cronbachs-alpha} eine Spannweite der Werte von 0.63 ($\alpha_{STU}$ bei der allgemeinen, in Bezug auf Frauen formulierten Skala) bis 0.84 ($\alpha_{ges}$ und $\alpha_{STU}$ bei der auf Schülerinnen und Schüler sowie Migrationshintergrund bezogenen Skala).
+Nach \citet{streiner2003starting} handelt es sich bei Werten von 0.6 -- 0.7 um fragwürdige bis akzeptable Werte, im Bereich 0.7 -- 0.8 um akzeptable bis gute Werte und im Bereich von 0.8 -- 0.9 um sehr gute Werte.
+Mit Hinblick auf die von \citet{perry2015modern} vorgestellten Werte in einem Bereich von $\alpha = 0.78$ bis $\alpha = 0.87$ handelt es sich somit um realistische Ergebnisse mit teilweise akzeptabler, teilweiser guter interner Konsistenz.
+
+Niedrige Werte für Cronbach's Alpha konnten insbesondere bei der allgemeinen, in Bezug auf Frauen formulierten Skala festgestellt werden.
+Auch bei Verwendung der schulspezifisch formulierten Variante lagen die Werte eher im akzeptablen Bereich.
+Die von \citet{bonefeld2022reflexion} präsentierten Werte für diese Skala lagen im Bereich von $\alpha = 0.56$ bis $\alpha = 0.73$.
+Es war also zu erwarten, dass hier niedrigere Werte erreicht werden würden.
+Die Ursache hierfür bei Verwendung der auf Frauen bezogenen Skala bleibt eine Frage, der in zukünftigen Arbeiten nachgegangen werden kann.
+
+Weiterhin konnten niedrige Werte für Cronbach's Alpha bei der Skala zur Erfassung der generellen Bias Awareness festgestellt werden ($\alpha_{ges} = 0.7$, $\alpha_{STU} = 0.64$, $\alpha_{LK} = 0.73$).
+Der Grund hierfür kann nicht abschließend geklärt werden.
+Eine mögliche Erklärung ist, dass es sich hierbei um die erste abgefragte Skala im Fragebogen handelte.
+Es wäre möglich, dass Teilnehmer im Laufe der Befragung Antworten mit höherer Konsistenz gaben als noch zu Beginn des Interviews.
+
+\subsection{Unterschiede bei schulkontextspezifischer Erfassung der Bias Awareness (H1)}
+\label{subsec:diskussion-h1}
+
+Bei Betrachtung der gesamten Stichprobe ergab sich, dass die Bias Awareness bei Erfassung mit der allgemeinen Skala signifikant höher lag als bei Erfassung mithilfe einer auf Schülerinnen und Schüler oder selbst unterrichtete Schülerinnen und Schüler formulierten Skala.
+In beiden Fällen konnte ein mittlerer Effekt festgestellt werden.
+
+Bei Einschränkung der Stichprobe auf Lehrkräfte konnte das selbe Ergebnis beobachtet werden, wobei im Fall der auf eigene Schülerinnen und Schüler formulierten Skala zusätzlich ein Wilcoxon-Test verwendet wurde.
+Sowohl der t-Test als auch der Wilcoxon-Test lieferten jedoch mit p < 0.001 positive Ergebnisse.
+Bei Betrachtung der Lehramtsstudierenden konnte statistische Signifikanz bei Vergleich der allgemeinen und der auf selbst unterrichtete Schülerinnen und Schüler bezogenen Skala gezeigt werden. 
+
+Mit Hinblick auf die obenstehenden Ergebnisse und Bezug auf die erste Hypothese kann die Alternativhypothese somit angenommen werden.
+Der beobachtete Effekt kann aufgrund mehrerer Erklärungen aufgetreten sein.
+
+Zunächst ist es möglich, dass generell eine geringere Bias Awareness gegenüber Schülerinnen und Schülern vorliegt.
+Ein Grund hierfür könnte eine größere Nähe zu den betroffenen Personen und damit verbundene Verzerrungen in der Selbstwahrnehmung sein.
+Es wäre jedoch auch möglich, dass die Differenzen bei den erfassten Werten aufgrund anderer Gründe zustande kommen.
+Ein Einflussfaktor ist beispielsweise die gesellschaftliche Erwartung, als Lehrkraft keine Biases gegenüber Schülerinnen und Schülern zu haben, welche dazu geführt haben könnte, dass entsprechende Antworten gegeben wurden.
+Zusätzlich kann es sein, dass Lehrkräfte tatsächlich ein geringeres Ausmaß an Biases gegenüber Schülerinnen und Schülern aufweisen und dies die gemessene Bias Awareness verzerrt.
+
+\subsection{Einfluss eigener Schülerinnen und Schüler auf die gemessene Bias Awareness (H2)}
+\label{subsec:diskussion-h2}
+
+Zur Überprüfung der zweiten Hypothese wurde untersucht, wie die Differenz in der Bias Awareness bei Erfassung mit auf Schülerinnen und Schüler formulierter Skala im Vergleich mit der auf selbst unterrichtete Schülerinnen und Schüler formulierten Skala war.
+
+Unter Betrachtung der gesamten Stichprobe ergab sich keine statistisch signifikante Abweichung (p = 0.201).
+Signifikanz konnte jedoch bei Einschränkung der Stichprobe auf Lehramtsstudierende gezeigt werden (p = 0.003).
+Die Effektstärke in Form von Cohen's d betrug hierbei d = 0.541, also ein mittlerer Effekt.
+Unter den Lehrkräften konnte weder mit dem t-Test (p = 0.383) noch dem Wilcoxon-Test (p = 0.481) ein statistisch signifikanter Effekt festgestellt werden.
+
+Die Hypothese lässt sich somit nicht eindeutig akzeptieren oder verwerfen.
+Betrachtet man lediglich Lehramtsstudierende, kann die Nullhypothese verworfen werden.
+In Hinblick darauf, dass Lehrkräfte mit längerer Berufserfahrung jedoch selbst unterrichtete Schülerinnen und Schüler meist über einen deutlich längeren Zeitraum unterrichten und eventuell auch auf Beziehungsebene eine engere persönliche Bindung zu ihnen aufweisen, muss bei Beurteilung in Hinblick auf die Hypothese besonderer Wert auf sie gelegt werden.
+Da weder in der Gesamtstichprobe noch bei Einschränkung auf Lehrkräfte ein statistisch signifikanter Effekt gemessen werden konnte, kann daher die Alternativhypothese verworfen werden.
+
+\subsection{Differenzen bei Erfassung der Bias Awareness in Bezug auf stereotypisierte Gruppen (H3)}
+\label{subsec:diskussion-h3}
+
+Wird die gesamte Stichprobe betrachtet, konnten ausschließlich bei Verwendung der in Bezug auf sozioökonomischen Status formulierten Skala statistisch signifikante Unterschiede zwischen der allgemeinen und schulspezifischen Variante festgestellt werden (p = 0.014).
+Bei Berechnung der Effektstärke mittels Cohen's d zeigte sich mit d = 0.274 jedoch lediglich ein schwacher Effekt.
+
+Schränkt man die betrachtete Stichprobe auf die Lehramtsstudierenden ein, zeigte sich sogar in keinem Fall ein statistisch signifikanter Effekt.
+Auch der Wilcoxon-Test konnte in den Fällen, in denen er zusätzlich verwendet wurde, keine statistische Signifikanz zeigen.
+
+Werden jedoch nur die Lehrkräfte mit Praxiserfahrung berücksichtigt, so wurde bei der in Bezug auf Migrationshintergrund (p = 0.026), sozioökonomischen Status (p < 0.001) sowie Frauen (t-Test: p = 0.061, Wilcoxon-Test: p = 0.046) formulierten Skala eine signifikante Differenz festgestellt.
+Es handelte sich hierbei um Effekte im Bereich von d = 0.275 bis d = 0.516, also um Effekte schwacher bis mittlerer Stärke.
+
+Mit Hinblick auf die Hypothese zeigt sich somit ein differenziertes Bild.
+Unter Einschränkung auf die Lehramtsstudierenden muss die Nullhypothese angenommen werden.
+Bei Betrachtung der Lehrkräfte mit Praxiserfahrungen kann in Bezug auf Migrationshintergrund, sozioökonomischen Status und Frauen von einem schwachen bis mittleren Effekt ausgegangen werden und somit die Nullhypothese verworfen werden.
+Aufgrund der fehlenden Effekte in Bezug auf Männer lässt sich dieses Ergebnis jedoch nicht auf die allgemein formulierte Hypothese generalisieren.
+Hier ist weitere Forschung nötig, um die Gründe für den fehlenden Effekt in Bezug auf Männer zu erforschen sowie weitere mögliche Einschränkungen aufzudecken.
+
+Bei Erfassung der stereotypenspezifischen Bias Awareness kam es in einigen Fällen zu nicht-normalverteilten Variablen.
+Hier wäre es interessant, die Fragestellung erneut mithilfe anderer Daten zu untersuchen, um so möglicherweise eine Normalverteilung zu erreichen und einen aussagekräftigeren t-Test durchführen zu können.
+Dies könnte die Notwendigkeit einer Modifizierung der Skala bedeuten, da es möglich ist, dass die erfassten Daten einer abgeschnittenen Normalverteilung entsprechen.
+In diesem Fall müsste die Skala angepasst werden, um diesem Effekt vorzubeugen.
+
+\subsection{Kontraste zwischen Lehramtsstudierenden und Lehrkräften mit Praxiserfahrung (H4)}
+\label{subsec:diskussion-h4}
+
+Bei Vergleich der Ergebnisse der Lehramtsstudierenden mit denen der Lehrkräfte mit Praxiserfahrung in \autoref{subsec:differenzen-studierende-lehrkraefte} konnte ausschließlich bei Betrachtung der allgemeinen, auf Schülerinnen und Schüler formulierten Skala eine signifikante Differenz festgestellt werden (p = 0.007).
+Hierbei handelte es sich mit d = 0.591 um einen Effekt mittlerer Stärke.
+Die Differenzen bei allen anderen Skalen wiesen keine statistische Signifikanz auf (d.h. p > $\alpha$ = 0.05).
+
+In Hinblick auf die Hypothese lässt sich somit nicht generalisiert schließen, dass die Bias Awareness von Lehramtsstudierenden signifikant von der Bias Awareness von Lehrkräften mit Praxiserfahrung abweicht.
+Die Nullhypothese muss daher akzeptiert werden.
+
+Für das Fehlen des erwarteten Effekts gibt es mehrere mögliche Erklärungen.
+Einerseits kann es sein, dass tatsächlich keine signifikanten Unterschiede beim latenten Konstrukt der Bias Awareness zwischen Lehramtsstudierenden und Lehrkräften vorliegt.
+Möglich wäre, dass sich die Bias Awareness im Laufe der beruflichen Tätigkeit nicht oder nur sehr wenig verändert, beispielsweise durch das Fehlen von entsprechenden Aufklärungen in Fortbildungen.
+Dies würde dazu führen, dass sich keine Unterschiede zwischen den beiden Gruppen feststellen lassen.
+Diesbezüglich wäre es von Interesse, mögliche erklärende Theorien für das Fehlen dieser Differenzen zu entwickeln und diese durch experimentelle Studien zu belegen.
+
+Eine weitere mögliche Erklärung ist die Zusammensetzung der Stichprobe der Lehramtsstudierenden.
+Die befragten Personen studierten im Mittel bereits 6.9 Semester lang und hatten zu 94\% bereits das Praxissemester oder Orientierungspraktikum absolviert.
+Ebenso lag der Anteil an Studierenden, welche bereits einen universitären Abschluss hatten, relativ hoch.
+Insgesamt hatten die befragten Personen aus der Stichprobe der Studierenden bereits also verhältnismäßig viel Lehrerfahrung.
+Es stellt sich die Frage, ob sich die hier präsentierten Ergebnisse bei Studienanfängern reproduzieren lassen.
+
+
+\section{Limitationen}
+\label{sec:limitationen}
+
+Wie bereits in \autoref{sec:datenaufbereitung} genauer beschrieben wurden im Rahmen der Datenaufbereitung Maßnahmen ergriffen, um die Qualität der vorliegenden Daten zu steigern.
+Ein Nebeneffekt der Auswahl von verpflichtenden Fragen beim Fragebogen war es, dass in weniger Interviews Fragen am Ende des Bogens beantwortet waren als noch am Anfang.
+Weiterhin war es möglich, dass Teilnehmer gegen Ende kein Interesse mehr an einer seriösen Teilnahme hatten und somit keine ehrlichen Antworten mehr gaben.
+Durch die so festgestellten Effekte kann es zu Verzerrungen in den Daten gekommen sein, welche nicht durch deren Aufbereitung und Bereinigung ausgeglichen werden konnten.
+
+Die Werte für die erlangten Abschlüsse der Studienteilnehmer sind dahingehend überraschend, dass sämtliche Befragten entweder Lehramtsstudierende oder bereits als Lehrkräfte tätig waren und eine Abiturquote von 25\% somit sehr gering ist.
+Eine mögliche Erklärung ist, dass Teilnehmer die Frage falsch verstanden haben können.
+Gefragt war nach allen erlangten Bildungsabschlüssen, dies könnte aus verschiedenen Gründen jedoch als Frage nach dem höchsten erlangten Bildungsabschluss missverstanden worden sein.
+
+Ein weiterer Punkt ist die Zusammensetzung der vorliegenden Stichprobe.
+Zunächst war der Anteil der Lehrkräfte mit 61\% höher als der Anteil an Lehramtsstudierenden mit 39\%.
+Dies kann insbesondere bei Vergleich der beiden Gruppen miteinander die Aussagekraft der Vergleiche einschränken und das durch die Gesamtstichprobe dargestellte Bild verzerren.
+Weiterhin lag innerhalb der Lehramtsstudierenden die Quote der Personen mit abgeschlossenem Masterstudium oder Staatsexamen mit 17\% bzw. 14\% relativ hoch.
+Auch die durchschnittliche Studiendauer war mit einem Mittelwert von 6.9 Semestern relativ hoch, wobei es hier eine große Varianz gab (SD = 3.9).
+Dies kann die Aussagekraft zu dieser Gruppe einschränken, da zusätzlich auch sehr viele der Befragten schon Praxiserfahrung mitbrachten.
+Der Anteil an weiblichen befragten Personen war mit 85\% (bzw. 81\% der Lehrkräfte und sogar 91\% der Lehramtsstudierenden) sehr hoch.
+Dies kann einen Einfluss auf die Richtung und das Ausmaß der vorhandenen geschlechtsbezogenen Biases sowie die geschlechtsbezogene Bias Awareness gehabt haben.
+
+Die Skalen zur Bias Awareness dienen der Messung des Bewusstseins über das Vorhandensein eigener Biases.
+Was nicht durch sie erfasst werden kann, ist das Ausmaß der tatsächlichen Existenz solcher Biases.
+So kann es beispielsweise sein, dass eine Lehrkraft auf der Skala zur Erfassung der schulbezogenen Bias Awareness in Bezug auf den sozioökonomischen Status einen niedrigen Wert erlangt.
+Der Grund dafür muss jedoch nicht unbedingt sein, dass die Person sich ihrer Biases nicht bewusst ist, sondern kann auch aus der einfachen Tatsache resultieren, dass das Ausmaß ihrer Biases gegenüber dieser stereotypisierten Gruppe sehr gering ist.
+
+Die Bias Awareness wurde in der vorliegenden Arbeit ausschließlich auf Basis von Selbsteinschätzungen mithilfe der Skala nach \citet{perry2015modern} erhoben.
+Es wäre möglich, dass die Erhebung mithilfe anderer Skalen ein anderes Bild der Bias Awareness der befragten Personen zeichnet.
+Hier wäre unter Anderem auch die zusätzliche Verwendung von Skalen zur Messung des tatsächlichen Vorhandenseins von Biases nützlich, um die Ursache niedrigen Abschneidens auf der Bias Awareness Skala festlegen zu können.
+
+Zusätzlich fand keine Kontrolle der befragten Personen statt.
+Es wäre durchaus möglich, dass sich Lehramtsstudierende als Lehrkräfte ausgegeben haben oder umgekehrt oder sogar Personen ohne Hintergrund im Bildungsbereich an der Befragung teilgenommen haben.
+
+Weiterhin ist der Einfluss sozialer Erwartungen auf die Antworten der befragten Personen ein Punkt, der bei der Einordnung der Ergebnisse beachtet werden muss.
+Beispielsweise ist es möglich, dass Personen, die in einer rassistisch geprägten Gesellschaft leben, auf Fragen in Bezug auf Rassismus eher positiv antworten, auch wenn sie diese Werte persönlich nur wenig vertreten.
+Der gesellschaftliche Einfluss kann ebenfalls einen Einfluss auf die Bias Awareness haben und so die hier erhobenen Daten beeinflussen.
+
+
+\section{Zukünftige Arbeit}
+\label{sec:zukuenftige-arbeit}
+
+Es wäre interessant zu untersuchen, wie das Ausmaß der tatsächlich vorhandenen Biases beeinflussen kann, welches Ergebnis befragte Personen auf der Skala zur Erfassung der Bias Awareness erreichen.
+Hier wäre es beispielsweise möglich, beides abzufragen und bei einem hohen Ausmaß der Beurteilung durch die Bias Awareness Skala eine höhere Bedeutung zuzumessen.
+
+Da in der im Rahmen dieser Arbeit durchgeführten Befragung hauptsächlich weibliche Lehrkräfte befragt wurden, könnte eine interessante Frage sein, inwiefern sich das Geschlecht der befragten Personen auf die Bias Awareness oder das Vorhandensein von Biases auswirkt.
+Insbesondere im Hinblick auf die Erfassung der Bias Awareness mit der geschlechtsspezifisch formulierten Skala wäre es möglich, dass sich Unterschiede zwischen der auf Frauen und auf Männer formulierten Skala ergeben.
+
+Eine weitere interessante Frage ist die nach dem Zusammenhang zwischen der Berufserfahrung von Lehrkräften und ihrer Bias Awareness.
+Es könnte zum Beispiel festgestellt werden, dass es in den ersten Berufsjahren im Vergleich zum Studium zu einem Anstieg der Bias Awareness kommt, diese sich jedoch über das weitere Berufsleben hinweg nicht weiter verändert.
+Weiterhin könnten Langzeitstudien durchgeführt werden, welche die Bias Awareness von Lehramtsstudierenden untersucht und dieselben Testpersonen nach mehrjähriger Berufserfahrung erneut befragt.
+
+Zusätzlich könnte man untersuchen, welchen Zusammenhang es zwischen der Bias Awareness und der Schulart gibt, an der die befragten Lehrkräfte tätig sind.
+Es wäre möglich, dass es hier zu Differenzen je nach Tätigkeitsbereich kommt.
