--- a/einleitung.tex
+++ b/einleitung.tex
@@ -1,5 +1,8 @@
 \chapter{Einleitung}
+\label{ch:einleitung}
 
 \section{Motivation}
+\label{sec:motivation}
 
 \section{Zielsetzung}
+\label{sec:zielsetzung}
