--- a/forschung.tex
+++ b/forschung.tex
@@ -1,9 +1,11 @@
-\chapter{Bisherige Forschung}
+\chapter{Bisherige Forschung und Theorie}
+\label{ch:bisherige-forschung}
 
 Um die notwendige Basis für die vorliegende Arbeit zu schaffen, wird zunächst ein Blick auf die bisherige Literatur geworfen.
 Beginnend mit einem allgemeinen Blick auf kognitive Verzerrungen als Teil der psychologisch-kognitiven Forschung, ihren Ursachen sowie Beispielen der genannten Phänomene liegt der Fokus insbesondere auf impliziten Stereotypen.
 Als Möglichkeit, die Auswirkungen des implicit bias zu reduzieren wird anschließend eine Einführung zur Thematik der Bias Awareness geliefert sowie bisherige Literatur dazu überprüft.
-Abschließend wird diskutiert, inwiefern Biases im schulischen Kontext präsent sind und in welchen Aspekten sich ihre Auswirkungen auf das Lehren und Lernen äußern.
+Anschließend wird diskutiert, inwiefern Biases im schulischen Kontext präsent sind und in welchen Aspekten sich ihre Auswirkungen auf das Lehren und Lernen äußern.
+Schließlich wird darauf eingegangen, welche Einflüsse die Itemformulierung bei Fragebögen auf die Erfassung der Bias Awareness hat.
 
 
 \section{Kognitive Verzerrungen}
@@ -15,7 +17,7 @@ Die zahlreichen Manifestationen dieser Verzerrungen äußern sich auf verschiede
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\textwidth]{resources/cognitive-bias-cheat-sheet.png}
-	\caption{Cognitive Bias Codex -- Beispiele verschiedener kognitiver Biases \citep{benson2016cognitive}}
+	\caption[Cognitive Bias Codex]{Cognitive Bias Codex -- Beispiele verschiedener kognitiver Biases \citep{benson2016cognitive}}
 	\label{fig:cognitive-bias-cheat-sheet}
 \end{figure}
 
@@ -124,7 +126,7 @@ So werden beispielsweise arme Menschen, welche selbst einen niedrigen sozio-öko
 		& \multirow{2}{*}{\rotatebox[origin=c]{90}{niedrig}} &  Verachtung & Neid\\
 		&& z.B. arme Menschen & z.B. reiche Menschen
 	\end{tabularx}
-	\caption{Stereotype Content Model (Darstellung nach \cite{fiske2002model})}
+	\caption[Stereotype Content Model]{Stereotype Content Model (Darstellung nach \cite{fiske2002model})}
 	\label{tab:implicit-stereotype-warmth-competence}
 \end{table}
 
@@ -134,6 +136,7 @@ Weiterhin können implizite Stereotype zu selbsterfüllenden Prophezeihungen fü
 Zum Beispiel kann ein Arbeitgeber, der ein negatives Bild von Frauen in Führungspositionen hat, diese in Bewerbungsgesprächen durch seine Rückmeldungen negativ beeinflussen und somit zu einem schlechteren Ergebnis der Bewerberin führen.
 Zusätzlich können bekannte Stereotype das Selbstbild von Mitgliedern der betroffenen Personengruppe negativ beeinflussen \citep{cox2012stereotypes, ebert2013positionsartikel}.
 Dies kann zu einer Internalisierung der mit dem Stereotyp verbundenen Eigenschaften führen.
+Die Angst von Betroffenen, aufgrund von Stereotypen zu beurteilt zu werden oder existierende Vorurteile durch ihr Verhalten zu bestätigen, ist ein häufiges Phänomen, was unter dem Namen \emph{stereotype threat} bekannt ist \citep{steele1995stereotype, keller2003stereotype}.
 Der Effekt der selbsterfüllenden Prophezeihung akkumuliert sich außerdem \citep{madon2018accumulation}, d.h. je mehr Menschen stereotypische Erwartungen haben, desto größer die Reaktion im Verhalten der betroffenen Person.
 
 Stereotype und Vorurteile sind häufig die Ursache offener Diskriminierung.
@@ -143,12 +146,79 @@ Beispielsweise lässt sich die Diskriminierung von bestimmten Gruppen bei Jobint
 \section{Bias Awareness}
 \label{sec:bias-awareness}
 
-Eine höhere Bias Awareness trägt dazu bei, den eigenen impliziten Bias zu reduzieren \citep{pope2018awareness} und hilft, den Einfluss von Biases auf beobachtete Handlungen zu erkennen \citep{perry2015modern}.
+Wie bereits in \autoref{sec:implicit-bias} beschrieben handelt es sich beim implicit bias um kognitive Verzerrungen, über deren Existenz sich das Individuum nicht bewusst ist.
+In Studien konnte jedoch gezeigt werden, dass Vorurteile nach einer Intervention, welche über deren Vorhandensein aufklärt, wesentlich geringer ausfallen \citep{penner1970interpersonal, grube1994inducing}.
+Auch neuere Studien konnten bestätigen, dass sich Menschen weniger diskriminierend verhalten oder die negativen Effekte ihrer Vorurteile kompensieren, wenn ihnen diese bewusst gemacht werden \citep{monteith1993self, monteith2010aself, monteith2010bself, pope2018awareness}.
+\textciteauthor{rohner2013reducing} konnten außerdem demonstrieren, dass der attractiveness bias bei Bewerbungsgesprächen reduziert werden kann, wenn die Versuchspersonen vor der Bewertung der Bewerbungen über die Existenz des Bias aufgeklärt wurden und das Ausmaß ihres eigenen Bias einschätzen mussten.
+Dieser Effekt trat nicht auf, wenn lediglich eine Aufklärung stattfand.
+Dies spricht dafür, dass erst die aktive Einschätzung der kognitiven Verzerrungen (eventuell durch eine damit verbundene Erhöhung der Bias Awareness) zur Reduzierung der negativen Auswirkungen führt.
+
+Der Grad, zu welchem sich ein Individuum über die eigenen implicit biases bewusst ist, wird nach \citet{perry2015modern} als \emph{bias awareness} bezeichnet.
+Zusätzlich zu einer Reduktion der Auswirkungen des implicit bias konnten \textciteauthor{perry2015modern} zeigen, dass eine höhere Bias Awareness dabei helfen kann, den Einfluss von Biases auf beobachtete Handlungen zu erkennen.
+
+Doch warum reduzieren sich die Effekte der Vorurteile beim Bewusstwerden über deren Existenz?
+Nach der \emph{Belief System Theory} \citep{rokeach1968theory, grube1994inducing} leben Menschen nach einer Menge an Werten, die ein zusammenhängendes System bilden.
+Ihre Handlungen und ihr Denken richten die Personen nach diesen Wertevorstellungen aus und nutzen diese, um ihr Handeln als gut oder schlecht zu bewerten.
+In manchen Situationen -- beispielsweise nach der Aufklärung über Vorurteile -- werden wir nun damit konfrontiert, dass unser Verhalten nicht im Einklang mit unserem Wertesystem steht.
+Diese Differenz führt dazu, dass wir zukünftig in ähnlichen Situationen stärker darauf achten, unsere Handlungen an unseren Werten auszurichten.
+
+Nach \citet{perry2015modern} gibt es trotz der generellen Tendenz, dass eine höhere Bias Awareness das Ausmaß von Vorurteilen sowie deren Effekte reduzieren kann, starke individuelle Unterschiede.
+So existieren beispielsweise Differenzen in der individuellen Motivation, sich frei von Vorurteilen zu verhalten \citep{devine2002regulation, plant1998internal}.
+Zusätzlich erkennen manche Personen auch nicht, dass ihr Verhalten ihren Werten widerspricht \citep{monteith1998proneness} oder reagieren sich bei Konfrontation defensiv.
+Doch auch nach dem Erkennen der eigenen Vorurteile existieren Unterschiede im Ausmaß, zu dem die daraus resultierenden negativen Effekte ausgeglichen werden können \citep{moskowitz2011egalitarian}.
 
 
 \section{Implicit Bias und Bias Awareness im schulischen Kontext}
 \label{sec:biases-schule}
 
-Verzerrungen in Deutsch und Mathematik bei Grundschullehrkräften: \cite{lorenz2016stereotype}
+Es gibt zahlreiche Gründe dafür, dass auch heute noch viele Differenzen in Bezug auf schulischen Erfolg im deutschen Schulsystem bestehen.
+Im IQB-Bildungstrend 2021 konnten sowohl geschlechtsbezogene, soziale als auch zuwanderungsbezogene Disparitäten festgestellt werden \citep{iqb2021bildungstrend}.
+%TODO: PISA-Studie 2018 vielleicht hier reinfließen lassen? Was sind die Ergebnisse?
 
-Hintergrundmerkmale $\rightarrow$ Lehrkrafteinschätzung Motivation $\rightarrow$ Lehrkrafterwartungen Leistungen: Soziale und geschlechtsbezogene Verzerrungen, ethnischer Hintergrund jedoch unabhängig von Lehrkrafteinschätzung Motivation \cite{gentrup2020einschatzungen}
+Die Erwartungen der Lehrkräfte haben einen signifikanten Einfluss auf die schulischen Erfolge sowie die Motivation der unterrichteten Kinder \citep{gentrup2020self}.
+Auch die impliziten Stereotype der Lehrkräfte spielen dabei eine Rolle für die Entwicklung von Unterschieden in Bezug auf Leistung und Motivation der Schülerinnen und Schüler.
+Beispielsweise werden Kinder mit türkischem Migrationshintergrund und Jungen im Fach Deutsch bei gleichen Ergebnissen wie die Vergleichsgruppe schlechter bewertet, während Kinder mit osteuropäischem Migrationshintergrund oder mit höherem sozio-ökonomischen Status im Fach Mathematik bei gleichen Leistungen besser bewertet werden \citep{lorenz2016stereotype}.
+Zahlreiche Studien konnten die Existenz und Auswirkungen sowohl geschlechtsbezogener \citep{keller2003stereotype, hermann2020maedchen, muntoni2020geschlechterstereotype}, ethnischer \citep{steele1995stereotype, glock2015preservice, glock2017bad, glock2019studies, costa2023does} als auch sozioökomomischer Stereotype \citep{tobisch2017negatively, kleen2020sag} im schulischen Kontext feststellen.
+
+\textciteauthor{martiny2020theoretischer} argumentieren, dass nicht nur die negativere Bewertung durch biasbeeinflusste Lehrkräfte einen negativen Effekt auf den schulischen Erfolg der betroffenen Schülerinnen und Schüler hat, sondern auch das Gruppenzugehörigkeitsgefühl leidet \citep{martiny2020theoretischer}.
+Infolge des stereotype threats können Stereotype den betroffenen Personen das Gefühl geben, nur als Repräsentant ihrer Gruppe und nicht als Individuum gesehen zu werden und infolgedessen die wahrgenommene Eingebundenheit in der Klasse reduzieren \citep{walton2012social}.
+Dies wiederum kann sich negativ auf die Motivation und die Leistungen der Schülerinnen und Schüler auswirken.
+
+Auch die Identifikation mit der Domäne, also beispielsweise dem akademischen Bereich an sich, leidet darunter, wenn die Zugehörigkeit zu einer bestimmmten sozialen Gruppe stereotypisiert ist \citep{crocker1989social}.
+Nach \citet{osborne2011identification} geht eine höhere Domänenidentifikation mit dem Bildungsbereich jedoch häufig mit besseren akademischen Leistungen einher, was weitere negative Effekte für stereotypisierte Personen nach sich zieht.
+
+Zusätzlich zu den negativen Auswirkungen für Schülerinnen und Schüler durch implizite Stereotypen konnte auch gezeigt werden, dass implicit biases in Bezug auf ethnische Hintergründe zum Risiko für Burnout der Lehrkraft beitragen können \citep{costa2023does}.
+
+Es gilt also, den implicit bias der Lehrkräfte so weit wie möglich zu reduzieren.
+Wie in \autoref{sec:bias-awareness} bereits diskutiert, kann eine erhöhte Bias Awareness dazu beitragen, sowohl die Auswirkungen als auch das Ausmaß der impliziten Stereotype zu reduzieren.
+
+%TODO: Mehr zu Bias Awareness im schulischen Kontext... Quellenlage schlecht
+Zu den Auswirkungen der Bias Awareness im schulischen Bereich gibt es bisher nur wenig Forschung.
+Es konnte jedoch im Rahmen einer Interventionsstudie gezeigt werden, dass eine Sensibilisierung für das Thema die Bias Awareness von Lehramtsstudierenden signifikant erhöhen kann \citep{bonefeld2022reflexion}.
+
+
+\section{Itemformulierung und Erfassung der Bias Awareness}
+\label{sec:itemformulierung}
+
+Eine große Rolle bei der Evaluierungen von Konstrukten wie der Bias Awareness spielen die Fragebogenitems, welche zur Erfassung des Konstrukts genutzt werden.
+Dabei spielt nicht nur die sprachliche Klarheit der Items eine Rolle, sondern auch die Reihenfolge, in welcher die verschiedenen Items angeordnet sind \citep[S.~675ff.]{baur2014handbuch}.
+
+Einen entscheidenden Einfluss auf die Validität des Fragebogens hat auch die Formulierung der Fragebogenitems.
+So können gesellschaftliche Erwartungen die Antworten der getesteten Personen beeinflussen, sodass diese Angaben entsprechend der sozialen Erwünschtheit machen \citep{kemper2012kurzskala, kaminski2017situational}.
+
+Weiterhin können kulturelle Unterschiede in der Formulierung der Fragebogenitems zu einer Verzerrung der Ergebnisse führen \citep{harzing2013challenges}.
+Es kann daher notwendig sein, Fragebögen an die Kultur der Zielgruppe entsprechend anzupassen \citep{poortinga2013umgang}.
+
+%TODO: noch mehr zu kontextspezifischer Formulierung? Quellenlage ist schlecht.
+Doch nicht nur die sprachliche Klarheit und die kulturelle Komponente der Fragebogenitemformulierung haben einen Einfluss auf das Ergebnis der Befragung.
+Es spielt auch eine Rolle, ob die Fragen innerhalb der einzelnen Items allgemein oder kontextspezifisch formuliert sind.
+Beispielsweise konnten \textciteauthor{bing2004incremental} zeigen, dass eine kontextgebundene Itemformulierung Messfehler reduzieren und die Validität der Messung erhöhen kann \citep{bing2004incremental}.
+
+%TODO: Mehr Quellen für Framing
+Ein ähnlicher Effekt entsteht bei speziellem Framing der Fragen.
+Dabei wird durch die Formulierung bereits eine Assoziation bei den Versuchspersonen hervorgerufen, welche das Ergebnis beeinflussen kann \citep{guyatt1999effect}.
+
+Auch das Format der Items kann eine Rolle spielen:
+So reduziert eine nuancenreiche Auswahl an Antwortmöglichkeiten das Risiko für biasbehaftete Antworten \citep{elson2017question}.
+Eine zu große Anzahl an Möglichkeiten ist jedoch auch nicht erwünscht, da es so zur Überforderung der Befragten kommen kann \citep{knutsen2010question}.
+Wird eine Likert-Skala mit ungerader Anzahl an Auswahloptionen gewählt, kann es zusätzlich zu einem Mittelpunkt-Bias kommen, bei dem die mittlere Kategorie überdurchschnittlich häufig gewählt wird \citep{kulas2009middle}.
