--- a/thesis.bib
+++ b/thesis.bib
@@ -10,10 +10,20 @@
    doi			=	{https://doi.org/10.1787/b5fd1b8f-en}
 }
 
+@book{iqb2021bildungstrend,
+	author		=	{Stanat, Petra and Schipolowski, Stefan and Schneider, Rebecca and Sachse, Karoline A. and Weirich, Sebastian and Henschel, Sofie},
+	title		=	{IQB-Bildungstrend 2021: Kompetenzen in den Fächern Deutsch und Mathematik am Ende der 4. Jahrgangsstufe im dritten Ländervergleich},
+	year		=	{2021},
+	isbn		=	{978-3-8309-9606-4},
+	doi			=	{https://doi.org/10.31244/9783830996064},
+	publisher	=	{Waxmann Verlag GmbH},
+	address		=	{Münster}
+}
+
 @incollection{henschel2022zuwanderungsbezogene,
 	title		=	{{Zuwanderungsbezogene Disparit\"aten}},
 	author		=	{Henschel, Sofie and Heppt, Birgit and Rjosk, Camilla and Weirich, Sebastian},
-	booktitle	=	{IQB Bildungstrend 2021},
+	booktitle	=	{IQB-Bildungstrend 2021},
 	year		=	{2022},
 	pages		=	{181--219},
 	publisher	=	{Waxmann Verlag GmbH},
@@ -85,14 +95,6 @@
 	doi = {https://doi.org/10.1016/j.stueduc.2019.04.010}
 }
 
-@misc{unifreiburg2018studien,
-	author			=	{Universit\"at Freiburg},
-	title			=	{{Studien- und Pr\"ufungsordnung der Albert-Ludwigs-Universit\"at f\"ur den Studiengang Master of Education f\"ur das Lehramt Gymnasium}},
-	year			=	{2018},
-	howpublished	=	{\url{https://www.jsl.uni-freiburg.de/informationen_fuer_studierende_web/pruefungsordnungen/master_of_education/studien-\%20und\%20pruefungsordnung.pdf}},
-	note			=	{(Accessed 24.08.2024)}
-}
-
 @book{pohl2004cognitive,
 	title={Cognitive illusions: A handbook on fallacies and biases in thinking, judgement and memory},
 	author={Pohl, R{\"u}diger},
@@ -113,14 +115,6 @@
 	publisher	=	{Springer}
 }
 
-@article{gentrup2020einschatzungen,
-	title		=	{{Einsch{\"a}tzungen der schulischen Motivation und des Arbeitsverhaltens durch Grundschullehrkr{\"a}fte und deren Bedeutung f{\"u}r Verzerrungen in Leistungserwartungen}},
-	author		=	{Gentrup, Sarah and Rjosk, Camilla and Stanat, Petra and Lorenz, Georg},
-	journal		=	{Erwartungen und Einsch{\"a}tzungen von Lehrkr{\"a}ften zur Leistung von Sch{\"u}ler* innen Akkuratheit und Bedeutung f{\"u}r Leistungsentwicklung},
-	year		=	{2020},
-	publisher	=	{Humboldt-Universit{\"a}t zu Berlin}
-}
-
 @article{ellis2018so,
 	title		=	{So, what are cognitive biases?},
 	author		=	{Ellis, Geoffrey},
@@ -136,12 +130,12 @@
 	moreauthor		=	{Manoogian III, John},
 	year			=	{2016},
 	journal			=	{Better Humans},
-	howpublished	=	{\url{https://betterhumans.pub/cognitive-bias-cheat-sheet-55a472476b18}},
+	url				=	{https://betterhumans.pub/cognitive-bias-cheat-sheet-55a472476b18},
 	note			=	{Accessed 10.09.2024}
 }
 
 @article{perry2015modern,
-	title	=	{Modern prejudice: Subtle, but unconscious? The role of Bias Awareness in Whites' perceptions of personal and others' biases},
+	title	=	{{Modern prejudice: Subtle, but unconscious? The role of Bias Awareness in Whites' perceptions of personal and others' biases}},
 	journal	=	{Journal of Experimental Social Psychology},
 	volume	=	{61},
 	pages	=	{64-78},
@@ -225,21 +219,22 @@
 }
 
 @article{landhuis2016scientific,
-	title={Scientific literature: Information overload},
-	author={Landhuis, Esther},
-	journal={Nature},
-	volume={535},
-	number={7612},
-	pages={457--458},
-	year={2016},
-	publisher={Nature Publishing Group UK London}
+	title		=	{Scientific literature: Information overload},
+	author		=	{Landhuis, Esther},
+	journal		=	{Nature},
+	volume		=	{535},
+	number		=	{7612},
+	pages		=	{457--458},
+	year		=	{2016},
+	publisher	=	{Nature Publishing Group},
+	address		=	{London, UK}
 }
 
 @misc{siegler2010every,
 	title			=	{Every 2 Days We Create As Much Information As We Did Up To 2003},
 	author			=	{Siegler, M. G. and Schmidt, Eric},
 	year			=	{2010},
-	howpublished	=	{\url{https://techcrunch.com/2010/08/04/schmidt-data}},
+	url				=	{https://techcrunch.com/2010/08/04/schmidt-data},
 	note			=	{Accessed 25.10.2024}
 }
 
@@ -343,7 +338,7 @@
 @article{brigham1971ethnic,
 title		=	{Ethnic stereotypes},
 author		=	{Brigham, John C},
-journal		=	{Psychological bulletin},
+journal		=	{Psychological Bulletin},
 volume		=	{76},
 number		=	{1},
 pages		=	{15},
@@ -404,14 +399,14 @@ publisher	=	{American Psychological Association}
 }
 
 @article{haines2016times,
-	title		=	{The times they are a-changing… or are they not? A comparison of gender stereotypes, 1983--2014},
+	title		=	{{The times they are a-changing... or are they not? A comparison of gender stereotypes, 1983--2014}},
 	author		=	{Haines, Elizabeth L and Deaux, Kay and Lofaro, Nicole},
 	journal		=	{Psychology of Women Quarterly},
 	volume		=	{40},
 	number		=	{3},
 	pages		=	{353--363},
 	year		=	{2016},
-	publisher	=	{Sage Publications Sage CA},
+	publisher	=	{Sage Publications},
 	address		=	{Los Angeles, CA}
 }
 
@@ -457,7 +452,7 @@ publisher	=	{American Psychological Association}
 }
 
 @incollection{dunning2011dunning,
-	title		=	{The Dunning--Kruger effect: On being ignorant of one's own ignorance},
+	title		=	{{The Dunning--Kruger effect: On being ignorant of one's own ignorance}},
 	author		=	{Dunning, David},
 	booktitle	=	{Advances in experimental social psychology},
 	volume		=	{44},
@@ -511,7 +506,7 @@ publisher	=	{American Psychological Association}
 }
 
 @article{martiny2020theoretischer,
-	title		=	{Ein theoretischer und empirischer {\"U}berblick {\"u}ber die Entwicklung von Stereotypen und ihre Konsequenzen im Schulkontext},
+	title		=	{{Ein theoretischer und empirischer {\"U}berblick {\"u}ber die Entwicklung von Stereotypen und ihre Konsequenzen im Schulkontext}},
 	author		=	{Martiny, Sarah E and Froehlich, Laura},
 	journal		=	{Stereotype in der Schule},
 	pages		=	{1--32},
@@ -719,7 +714,7 @@ publisher	=	{American Psychological Association}
 }
 
 @article{ebert2013positionsartikel,
-	title		=	{Positionsartikel zum Forschungsprogramm Explizite und implizite geschlechterbezogene Kognitionen heute},
+	title		=	{{Positionsartikel zum Forschungsprogramm Explizite und implizite geschlechterbezogene Kognitionen heute}},
 	author		=	{Ebert, Irena D and Steffens, Melanie C},
 	journal		=	{GENDER--Zeitschrift f{\"u}r Geschlecht, Kultur und Gesellschaft},
 	volume		=	{5},
@@ -727,5 +722,365 @@ publisher	=	{American Psychological Association}
 	pages		=	{9--10},
 	year		=	{2013},
 	publisher	=	{Verlag Barbara Budrich}
+}
+
+@article{grube1994inducing,
+	author		=	{Grube, Joel W. and Mayton II, Daniel M. and Ball-Rokeach, Sandra J.},
+	title		=	{Inducing Change in Values, Attitudes, and Behaviors: Belief System Theory and the Method of Value Self-Confrontation},
+	journal		=	{Journal of Social Issues},
+	volume		=	{50},
+	number		=	{4},
+	pages		=	{153-173},
+	doi			=	{https://doi.org/10.1111/j.1540-4560.1994.tb01202.x},
+	year		=	{1994}
+}
+
+@article{penner1970interpersonal,
+	title		=	{Interpersonal attraction toward a black person as a function of value importance},
+	author		=	{Penner, Louis A},
+	journal		=	{Personality: An International Journal},
+	volume		=	{2},
+	pages		=	{175--187},
+	year		=	{1970},
+	publisher	=	{ERIC}
+}
+
+@article{monteith1993self,
+	title		=	{Self-regulation of prejudiced responses: Implications for progress in prejudice-reduction efforts},
+	author		=	{Monteith, Margo J},
+	journal		=	{Journal of personality and social psychology},
+	volume		=	{65},
+	number		=	{3},
+	pages		=	{469--485},
+	year		=	{1993},
+	publisher	=	{American Psychological Association}
+}
+
+@article{monteith2010aself,
+	title		=	{Self-regulation and bias},
+	author		=	{Monteith, Margo J and Arthur, Steven A and Flynn, Sara M},
+	journal		=	{Handbook of prejudice, stereotyping, and discrimination},
+	pages		=	{493--507},
+	year		=	{2010},
+	publisher	=	{Sage},
+	address		=	{Thousand Oaks, CA}
+}
+
+@article{monteith2010bself,
+	title		=	{The self-regulation of prejudice: Toward understanding its lived character},
+	author		=	{Monteith, Margo J and Mark, Aimee Y and Ashburn-Nardo, Leslie},
+	journal		=	{Group Processes \& Intergroup Relations},
+	volume		=	{13},
+	number		=	{2},
+	pages		=	{183--200},
+	year		=	{2010},
+	publisher	=	{Sage Publications UK},
+	address		=	{London, England}
+}
+
+@article{rokeach1968theory,
+	title		=	{A Theory of Organization and Change Within Value-Attitude Systems},
+	author		=	{Rokeach, Milton},
+	journal		=	{Journal of social issues},
+	volume		=	{24},
+	number		=	{1},
+	year		=	{1968}
+}
+
+@article{grube1994inducing,
+	title		=	{Inducing change in values, attitudes, and behaviors: Belief system theory and the method of value self-confrontation},
+	author		=	{Grube, Joel W and Mayton, Daniel M and Ball-Rokeach, Sandra J},
+	journal		=	{Journal of social issues},
+	volume		=	{50},
+	number		=	{4},
+	pages		=	{153--173},
+	year		=	{1994},
+	publisher	=	{Wiley Online Library}
+}
+
+@article{devine2002regulation,
+	title		=	{The regulation of explicit and implicit race bias: the role of motivations to respond without prejudice},
+	author		=	{Devine, Patricia G and Plant, E Ashby and Amodio, David M and Harmon-Jones, Eddie and Vance, Stephanie L},
+	journal		=	{Journal of personality and social psychology},
+	volume		=	{82},
+	number		=	{5},
+	pages		=	{835},
+	year		=	{2002},
+	publisher	=	{American Psychological Association}
+}
+
+@article{plant1998internal,
+	title		=	{Internal and external motivation to respond without prejudice},
+	author		=	{Plant, E Ashby and Devine, Patricia G},
+	journal		=	{Journal of personality and social psychology},
+	volume		=	{75},
+	number		=	{3},
+	pages		=	{811},
+	year		=	{1998},
+	publisher	=	{American Psychological Association}
+}
+
+@article{moskowitz2011egalitarian,
+	title		=	{Egalitarian goals trigger stereotype inhibition: A proactive form of stereotype control},
+	author		=	{Moskowitz, Gordon B and Li, Peizhong},
+	journal		=	{Journal of Experimental Social Psychology},
+	volume		=	{47},
+	number		=	{1},
+	pages		=	{103--116},
+	year		=	{2011},
+	publisher	=	{Elsevier}
+}
+
+@article{monteith1998proneness,
+	title		=	{Proneness to prejudiced responses: Toward understanding the authenticity of self-reported discrepancies},
+	author		=	{Monteith, Margo J and Voils, Corrine I},
+	journal		=	{Journal of personality and social psychology},
+	volume		=	{75},
+	number		=	{4},
+	pages		=	{901--916},
+	year		=	{1998},
+	publisher	=	{American Psychological Association}
+}
+
+@article{costa2023does,
+	title		=	{{Does teachers’ ethnic bias stress them out? The role of teachers’ implicit attitudes toward and expectations of ethnic minority students in teachers’ burnout}},
+	author		=	{Costa, Sara and Pirchio, Sabine and Shevchuk, Anna and Glock, Sabine},
+	journal		=	{International Journal of Intercultural Relations},
+	volume		=	{93},
+	pages		=	{101757},
+	year		=	{2023},
+	publisher	=	{Elsevier}
+}
+
+@article{gentrup2020self,
+	title		=	{Self-fulfilling prophecies in the classroom: Teacher expectations, teacher feedback and student achievement},
+	author		=	{Gentrup, Sarah and Lorenz, Georg and Kristen, Cornelia and Kogan, Irena},
+	journal		=	{Learning and Instruction},
+	volume		=	{66},
+	pages		=	{101296},
+	year		=	{2020},
+	publisher	=	{Elsevier}
+}
+
+@incollection{walton2012social,
+	title		=	{Social belonging and the motivation and intellectual achievement of negatively stereotyped students},
+	author		=	{Walton, Gregory M and Carr, Priyanka B},
+	year		=	{2012},
+	editor		=	{Inzlicht, M and Schmader, T},
+	booktitle	=	{Stereotype threat: Theory, process and application},
+	pages		=	{89--106},
+	publisher	=	{Oxford University Press}
+}
+
+@article{keller2003stereotype,
+	title		=	{Stereotype threat in the classroom: Dejection mediates the disrupting threat effect on women’s math performance},
+	author		=	{Keller, Johannes and Dauenheimer, Dirk},
+	journal		=	{Personality and Social Psychology Bulletin},
+	volume		=	{29},
+	number		=	{3},
+	pages		=	{371--381},
+	year		=	{2003},
+	publisher	=	{Sage Publications},
+	address		=	{Thousand Oaks, CA}
+}
+
+@article{steele1995stereotype,
+	title		=	{Stereotype threat and the intellectual test performance of African Americans},
+	author		=	{Steele, Claude M and Aronson, Joshua},
+	journal		=	{Journal of personality and social psychology},
+	volume		=	{69},
+	number		=	{5},
+	pages		=	{797--811},
+	year		=	{1995},
+	publisher	=	{American Psychological Association}
+}
+
+@article{crocker1989social,
+	title		=	{Social stigma and self-esteem: The self-protective properties of stigma},
+	author		=	{Crocker, Jennifer and Major, Brenda},
+	journal		=	{Psychological review},
+	volume		=	{96},
+	number		=	{4},
+	pages		=	{608--630},
+	year		=	{1989},
+	publisher	=	{American Psychological Association}
+}
+
+@article{osborne2011identification,
+	title		=	{Identification with academics and motivation to achieve in school: How the structure of the self influences academic outcomes},
+	author		=	{Osborne, Jason W and Jones, Brett D},
+	journal		=	{Educational Psychology Review},
+	volume		=	{23},
+	pages		=	{131--158},
+	year		=	{2011},
+	publisher	=	{Springer}
+}
+
+@article{hermann2020maedchen,
+	title		=	{{Warum M{\"a}dchen schlechter rechnen und Jungen schlechter lesen--Wenn Geschlechtsstereotype zur Bedrohung f{\"u}r das eigene Leistungsverm{\"o}gen in der Schule werden}},
+	author		=	{Hermann, Johanna M},
+	journal		=	{Stereotype in der Schule},
+	pages		=	{33--70},
+	year		=	{2020},
+	publisher	=	{Springer}
+}
+
+@article{muntoni2020geschlechterstereotype,
+	title		=	{{Geschlechterstereotype in der Schule}},
+	author		=	{Muntoni, Francesca and Retelsdorf, Jan},
+	journal		=	{Stereotype in der Schule},
+	pages		=	{71--97},
+	year		=	{2020},
+	publisher	=	{Springer}
+}
+
+@article{kleen2020sag,
+	title		=	{{Sag’ mir, wie du hei{\ss}t, dann sage ich dir, wie du bist: Eine Untersuchung von Vornamen}},
+	author		=	{Kleen, Hannah and Glock, Sabine},
+	journal		=	{Stereotype in der Schule},
+	pages		=	{99--131},
+	year		=	{2020},
+	publisher	=	{Springer}
+}
+
+@article{tobisch2017negatively,
+	title		=	{Negatively or positively biased? Dependencies of teachers’ judgments and expectations based on students’ ethnic and social backgrounds},
+	author		=	{Tobisch, Anita and Dresel, Markus},
+	journal		=	{Social Psychology of Education},
+	volume		=	{20},
+	pages		=	{731--752},
+	year		=	{2017},
+	publisher	=	{Springer}
+}
+
+@incollection{bonefeld2022reflexion,
+	title		=	{{Reflexion eigener Stereotype als Motor zur nachhaltigen Stereotypreduktion bei angehenden Lehrkr{\"a}ften}},
+	author		=	{Bonefeld, Meike},
+	booktitle	=	{Stereotype in der Schule II: Ursachen und M{\"o}glichkeiten der Intervention},
+	pages		=	{341--377},
+	year		=	{2022},
+	publisher	=	{Springer}
+}
+
+@book{baur2014handbuch,
+	title		=	{{Handbuch Methoden der empirischen Sozialforschung}},
+	author		=	{Baur, Nina and Blasius, J{\"o}rg},
+	volume		=	{13},
+	year		=	{2014},
+	isbn		=	{978-3-531-18939-0},
+	doi			=	{10.1007/978-3-531-18939-0},
+	publisher	=	{Springer VS},
+	address		=	{Wiesbaden}
+}
+
+@article{kemper2012kurzskala,
+	title		=	{{Eine Kurzskala zur Erfassung des Gamma-Faktors sozial erw{\"u}nschten Antwortverhaltens: Die Kurzskala Soziale Erw{\"u}nschtheit-Gamma (KSE-G)}},
+	author		=	{Kemper, Christoph J and Beierlein, Constanze and Bensch, Doreen and Kovaleva, Anastassiya and Rammstedt, Beatrice},
+	year		=	{2012},
+	journal		=	{GESIS -- Working Papers},
+	publisher	=	{GESIS -- Leibniz-Institut für Sozialwissenschaften},
+	address		=	{Mannheim}
+}
+
+@phdthesis{kaminski2017situational,
+	title		=	{Situational Judgment Tests und Kontextspezifit{\"a}t: {\"U}berpr{\"u}fung des Einflusses von Sozialer Erw{\"u}nschtheit und {\"U}berpr{\"u}fung der Konstruktvalidit{\"a}t eines stark kontextspezifischen Situational Judgment Tests anhand des TEFEM (Test zur Erfassung von F{\"u}hrungs-und Entscheidungsverhalten im Milit{\"a}r)},
+	author		=	{Kaminski, Katarina Karoline},
+	year		=	{2017},
+	school		=	{Universit{\"a}t der Bundeswehr Hamburg},
+	address		=	{Hamburg}
+}
+
+@article{harzing2013challenges,
+	title		=	{Challenges in international survey research: A review with illustrations and suggested solutions for best practice},
+	author		=	{Harzing, Anne-Wil and Reiche, B Sebastian and Pudelko, Markus},
+	journal		=	{European Journal of International Management},
+	volume		=	{7},
+	number		=	{1},
+	pages		=	{112--134},
+	year		=	{2013},
+	publisher	=	{Inderscience Publishers Ltd}
+}
+
+@article{poortinga2013umgang,
+	title		=	{{Der Umgang mit methodischen Stolperfallen in der kulturvergleichenden Stressforschung}},
+	author		=	{Poortinga, Ype H and van de Vijver, Fons JR},
+	journal		=	{Handbuch Stress und Kultur: Interkulturelle und kulturvergleichende Perspektiven},
+	editor		=	{Genkova, Petia and Ringeisen, Tobias and Leong, Frederick T. L.},
+	pages		=	{153--171},
+	year		=	{2013},
+	doi			=	{https://doi.org/10.1007/978-3-531-93449-5},
+	isbn		=	{978-3-531-93449-5},
+	publisher	=	{Springer VS},
+	address		=	{Wiesbaden}
+}
+
+@phdthesis{rottweiler2023emotionsregulation,
+	title		=	{Emotionsregulation im Alltag von Studierenden -- Kontextspezifische, emotionsspezifische und interindividuelle Unterschiede},
+	author		=	{Rottweiler, Anna-Lena Karola},
+	year		=	{2023},
+	school		=	{Universität Augsburg},
+	address		=	{Augsburg}
+}
+
+@article{guyatt1999effect,
+	title		=	{Effect of the framing of questionnaire items regarding satisfaction with training on residents' responses},
+	author		=	{Guyatt, Gordon H and Cook, Deborah J and King, Derek and Norman, Geoffrey R and Kane, SL and Van Ineveld, C},
+	journal		=	{Academic Medicine},
+	volume		=	{74},
+	number		=	{2},
+	pages		=	{192--194},
+	year		=	{1999},
+	publisher	=	{LWW}
+}
+
+@article{knutsen2010question,
+	title		=	{Question and questionnaire design},
+	author		=	{Knutsen, Jon A. and Presser, Stanley},
+	journal		=	{Handbook of survey research},
+	pages		=	{263--313},
+	year		=	{2010},
+	isbn		=	{978-1-84855-224-1},
+	publisher	=	{Emerald Group Publishing Ltd}
+}
+
+@article{kulas2009middle,
+	title		=	{Middle category endorsement in odd-numbered Likert response scales: Associated item characteristics, cognitive demands, and preferred meanings},
+	author		=	{Kulas, John T and Stachowski, Alicia A},
+	journal		=	{Journal of Research in Personality},
+	volume		=	{43},
+	number		=	{3},
+	pages		=	{489--493},
+	year		=	{2009},
+	publisher	=	{Elsevier}
+}
+
+@misc{leiner2024sosci,
+	author		=	{Leiner, D. J.},
+	title		=	{SoSci Survey (Version 3.5.02)},
+	year		=	{2024},
+	url			=	{https://www.soscisurvey.de},
+	note		=	{Accessed 12.12.2024}
+}
+
+@article{cohen1992power,
+	title		=	{A power primer},
+	author		=	{Cohen, Jacob},
+	year		=	{1992},
+	journal		=	{Psychological Bulletin},
+	volume		=	{112},
+	number		=	{1},
+	pages		=	{155--159},
+	publisher	=	{American Psychological Association}
+}
+
+@article{streiner2003starting,
+	title		=	{Starting at the beginning: an introduction to coefficient alpha and internal consistency},
+	author		=	{Streiner, David L},
+	journal		=	{Journal of personality assessment},
+	volume		=	{80},
+	number		=	{1},
+	pages		=	{99--103},
+	year		=	{2003},
+	publisher	=	{Taylor \& Francis}
 }
 
