--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,15 +1,19 @@
 \thispagestyle{empty}
 \backgroundsetup{scale=1, angle=0, opacity=1, contents={\includegraphics[width=\paperwidth, height=\paperheight, keepaspectratio]{resources/Vorlage_Titelblatt_Abschlussarbeit.pdf}}}
-\Huge{\textbf{Masterarbeit}}
-\vspace{3cm}\\
-\huge{\thetitle}
-\vspace{5cm}\\
-\Large{vorgelegt an der}\\
-\Large{Albert-Ludwigs-Universität Freiburg}
-\vspace{2cm}\\
+\vspace*{0.1cm}
+\Huge{\textbf{\thetitle}}
+%\vspace{3cm}\\
+%\huge{\thetitle}
+%\vspace{5cm}\\
+
+\vspace{2cm}
+\Large{vorgelegt an der \\Albert-Ludwigs-Universität Freiburg}
+
+\vspace{2cm}
 \Large{von Lorenz Bung}
-\vspace{5cm}\\
-31.12.2024
+
+\vspace{8.5cm}
+\dateend
 \newpage
 \backgroundsetup{contents={}}
 
@@ -39,8 +43,8 @@
 			& Schlossbergring 36 \\
 			& 79098 Freiburg \\&\\
 			Prüfer: & Prof. Dr. Meike Bonefeld \\
-			Ausgabedatum: & 01.12.2024 \\
-			Abgabedatum: & 31.12.2024 \\
+			Ausgabedatum: & \datestart \\
+			Abgabedatum: & \dateend \\
 		\end{tabular}
 		\renewcommand{\arraystretch}{1.5}	%Zeilenabstand in der Tabelle zurücksetzen
 	\end{center}
