--- a/thesis-ufr.sty
+++ b/thesis-ufr.sty
@@ -2,17 +2,23 @@
 
 \usepackage[left=3cm, right=3cm, top=3cm, bottom=3cm]{geometry}
 \usepackage[onehalfspacing]{setspace}	% Line spacing
-%\usepackage[utf8]{inputenc}	% Not needed when using XeLaTeX
-%\usepackage[T1]{fontenc}
-\usepackage{helvet}
-\usepackage{fontspec}
+\ifPDFTeX
+	\usepackage[utf8]{inputenc}	% Not needed when using XeLaTeX
+	\usepackage[T1]{fontenc}
+\else
+	\usepackage{fontspec}
+\fi
 \setmainfont{Free Helvetian}
+\usepackage{helvet}
 \setlength\parindent{0cm}
 \setlength\parskip{1em}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{arevmath}	%Sans-serif font
+\usepackage{mathastext}
 \usepackage{multirow}	%Join rows in tables
 \renewcommand{\arraystretch}{1.5}	%Vertical spacing in tables etc.
+\usepackage[shortlabels]{enumitem}	%For \begin{enumerate}[(i)]
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{tabularx}
@@ -61,10 +67,6 @@
 \renewcommand{\chaptermark}[1]{\markboth{\normalfont\thechapter.\space\color{ufrblue}#1}{}}
 
 
-
-
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 % Some colors used for code listings
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -105,3 +107,39 @@
 \usepackage{enumitem}
 \setlist[itemize]{noitemsep, topsep=0pt}
 \usepackage[ngerman]{babel}
+
+%Own commands
+\newcommand{\textciteauthor}[1]{{\protect\NoHyper\citeauthor{#1}\protect\endNoHyper}}	%Used to output author name(s) without hyperlink to the bibliography
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% R Code listing environment
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{listings}
+\lstset{ %
+	language=R,                     % the language of the code
+	basicstyle=\footnotesize,       % the size of the fonts that are used for the code
+	numbers=left,                   % where to put the line-numbers
+	numberstyle=\tiny\color{gray},  % the style that is used for the line-numbers
+	stepnumber=1,                   % the step between two line-numbers. If it's 1, each line
+	% will be numbered
+	numbersep=5pt,                  % how far the line-numbers are from the code
+	backgroundcolor=\color{white},  % choose the background color. You must add \usepackage{color}
+	showspaces=false,               % show spaces adding particular underscores
+	showstringspaces=false,         % underline spaces within strings
+	showtabs=false,                 % show tabs within strings adding particular underscores
+	frame=single,                   % adds a frame around the code
+	rulecolor=\color{black},        % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. commens (green here))
+	tabsize=2,                      % sets default tabsize to 2 spaces
+	captionpos=b,                   % sets the caption-position to bottom
+	breaklines=true,                % sets automatic line breaking
+	breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
+	%title=\lstname,                 % show the filename of files included with \lstinputlisting;
+	% also try caption instead of title
+	keywordstyle=\color{purple},      % keyword style
+	commentstyle=\color{gray},   % comment style
+	stringstyle=\color{orange},      % string literal style
+	escapeinside={\%*}{*)},         % if you want to add a comment within your code
+	morekeywords={TRUE, FALSE, NULL, NA}            % if you want to add more keywords to the set
+} 
